# python-job-aggregator

./: .dockerignore  .env.example  .gitignore  2026-06-30-python-job-aggregator-design.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  cli.md
job_aggregator/: __init__.py
job_aggregator/app/: __init__.py
job_aggregator/app/adapters/: __init__.py  base.py  custom_page.py  demo.py  greenhouse.py  lever.py
job_aggregator/app/api/: __init__.py  app.py  deps.py
job_aggregator/app/api/routes/: __init__.py  admin.py  dedupe.py  health.py  jobs.py  runs.py  sources.py
job_aggregator/app/api/schemas/: __init__.py  dedupe.py  jobs.py  runs.py  sources.py
job_aggregator/app/cli/: main.py
job_aggregator/app/core/: config.py  logging.py
job_aggregator/app/crawler/: __init__.py  checkpoints.py  collector.py  contexts.py  scheduler.py
job_aggregator/app/db/: __init__.py  models.py  session.py
job_aggregator/app/fetchers/: __init__.py  browser.py  http.py  rate_limit.py
job_aggregator/app/pipeline/: __init__.py  dedupe.py  enrich.py  normalize.py
job_aggregator/app/services/: jobs.py  runs.py
scripts/: seed_demo.py
tests/: test_scaffold.py
tests/adapters/: fakes.py  test_base.py  test_sources.py
tests/adapters/fixtures/: custom_jobs.html  greenhouse_jobs.json  lever_jobs.json
tests/api/: test_api.py
tests/db/: test_repositories.py
tests/fetchers/: test_http.py
tests/integration/: test_collector.py
tests/pipeline/: test_normalize.py
(+8 files in other folders)
