[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-aggregator"
version = "0.1.0"
description = "A Python-first multi-source job aggregation backend."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luna" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "playwright>=1.45.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0"
]

[project.scripts]
job-aggregator = "job_aggregator.app.cli.main:app"

[tool.setuptools.packages.find]
include = ["job_aggregator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
branch = true
source = ["job_aggregator"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
